--- a/.github/workflows/publish-create-branch.yaml
+++ b/.github/workflows/publish-create-branch.yaml
@@ -115,7 +115,7 @@ jobs:
         run: |
           VERSION="${{ github.event.inputs.version }}"
           MAJOR_VERSION=$(echo $VERSION | cut -d. -f1,2)
-          MAJOR_BRANCH_NAME="v${MAJOR_VERSION}"
+          MAJOR_BRANCH_NAME="${MAJOR_VERSION}"
           echo "Release prepared on branch: $MAJOR_BRANCH_NAME"
           echo "Please trigger the publish-release workflow with branch name: $MAJOR_BRANCH_NAME and version: $VERSION"
 
@@ -171,26 +171,35 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Set custom submodule URL and fetch
-        run: |
-          SUBMODULE_PATH="core/_thirdparty/coolbpf"
-          git config submodule.$SUBMODULE_PATH.url "https://github.com/aliyun/coolbpf.git"
-          git submodule update --init
-          cd $SUBMODULE_PATH
-          echo "Current commit: $(git rev-parse HEAD)"
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Build Linux ARM64 package
         run: |
           VERSION="${{ github.event.inputs.version }}"
-          # 使用 Docker 在 ARM64 环境下构建
-          docker run --rm --platform linux/arm64 -v $(pwd):/workspace -w /workspace golang:1.19.10-bullseye bash -c "
-            apt-get update && apt-get install -y make gcc g++ git
-            cd /workspace
-            SUBMODULE_PATH='core/_thirdparty/coolbpf'
-            git config submodule.\$SUBMODULE_PATH.url 'https://github.com/aliyun/coolbpf.git'
-            git submodule update --init
-            make dist
-          "
+          # 使用 ARM64 的 Docker-in-Docker 环境
+          docker run --rm --platform linux/arm64 \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            -v $(pwd):/workspace \
+            -w /workspace \
+            --privileged \
+            docker:24.0.5-dind \
+            sh -c "
+              # 启动 Docker daemon
+              dockerd --host=unix:///var/run/docker.sock &
+              sleep 10
+              
+              # 安装必要的工具
+              apk add --no-cache make git
+              
+              # 设置子模块
+              SUBMODULE_PATH='core/_thirdparty/coolbpf'
+              git config submodule.\$SUBMODULE_PATH.url 'https://github.com/aliyun/coolbpf.git'
+              git submodule update --init
+              
+              # 执行构建
+              make dist
+            "
           ls -la dist/
 
       - name: Upload Linux ARM64 artifacts
@@ -216,19 +225,62 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: Set custom submodule URL and fetch
-        run: |
-          SUBMODULE_PATH="core/_thirdparty/coolbpf"
-          git config submodule.$SUBMODULE_PATH.url "https://github.com/aliyun/coolbpf.git"
-          git submodule update --init
-          cd $SUBMODULE_PATH
-          echo "Current commit: $(git rev-parse HEAD)"
-
       - name: Build Windows package
         run: |
           VERSION="${{ github.event.inputs.version }}"
-          make dist
-          ls -la dist/
+          
+          # 设置环境变量
+          $env:LOONCOLLECTOR_VERSION = $VERSION
+          $env:BUILD_LOGTAIL_UT = "OFF"
+          
+          # 检查并设置依赖路径
+          # GitHub Windows runner 已经安装了 Visual Studio 2022
+          $env:CMAKE_BIN = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe"
+          if (!(Test-Path $env:CMAKE_BIN)) {
+            $env:CMAKE_BIN = "C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe"
+          }
+          if (!(Test-Path $env:CMAKE_BIN)) {
+            $env:CMAKE_BIN = "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe"
+          }
+          
+          # 设置 devenv 路径 (使用 VS2022)
+          $env:DEVENV_BIN = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\devenv.com"
+          if (!(Test-Path $env:DEVENV_BIN)) {
+            $env:DEVENV_BIN = "C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\devenv.com"
+          }
+          if (!(Test-Path $env:DEVENV_BIN)) {
+            $env:DEVENV_BIN = "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\devenv.com"
+          }
+          
+          # 下载并设置 Boost 依赖
+          if (!(Test-Path "D:\loongcollector-windows-build\boost_1_68_0")) {
+            Write-Host "Downloading Boost 1.68..."
+            New-Item -ItemType Directory -Path "D:\loongcollector-windows-build" -Force
+            Invoke-WebRequest -Uri "https://ilogtail-community-edition.oss-cn-shanghai.aliyuncs.com/prebuilt-dependencies/boost_1_68_0-msvc-14.1-64.exe" -OutFile "D:\loongcollector-windows-build\boost_1_68_0-msvc-14.1-64.exe"
+            Start-Process -FilePath "D:\loongcollector-windows-build\boost_1_68_0-msvc-14.1-64.exe" -ArgumentList "/S" -Wait
+          }
+          $env:BOOST_ROOT = "D:\loongcollector-windows-build\boost_1_68_0"
+          
+          # 下载并设置 LoongCollector 依赖
+          if (!(Test-Path "D:\loongcollector-windows-build\ilogtail-deps.windows-x64")) {
+            Write-Host "Downloading LoongCollector dependencies..."
+            Invoke-WebRequest -Uri "https://ilogtail-community-edition.oss-cn-shanghai.aliyuncs.com/prebuilt-dependencies/ilogtail-deps.windows-x64.zip" -OutFile "D:\loongcollector-windows-build\ilogtail-deps.windows-x64.zip"
+            Expand-Archive -Path "D:\loongcollector-windows-build\ilogtail-deps.windows-x64.zip" -DestinationPath "D:\loongcollector-windows-build" -Force
+          }
+          $env:LOONCOLLECTOR_DEPS_PATH = "D:\loongcollector-windows-build\ilogtail-deps.windows-x64\ilogtail-deps.windows-x64"
+          
+          # 执行 Windows 构建脚本
+          Write-Host "Starting Windows build..."
+          .\scripts\windows64_build_github_actions.bat $VERSION
+          
+          # 检查构建结果
+          if (Test-Path "output") {
+            Write-Host "Build successful. Output files:"
+            Get-ChildItem -Path "output" -Recurse
+          } else {
+            Write-Error "Build failed - output directory not found"
+            exit 1
+          }
 
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
