--- a/.github/workflows/publish-create-branch.yaml
+++ b/.github/workflows/publish-create-branch.yaml
@@ -150,11 +150,25 @@ jobs:
           make dist
           ls -la dist/
 
+      - name: Generate SHA256 for Linux AMD64
+        run: |
+          VERSION="${{ github.event.inputs.version }}"
+          cd dist
+          sha256sum loongcollector-$VERSION.linux-amd64.tar.gz > loongcollector-$VERSION.linux-amd64.tar.gz.sha256
+          ls -la *.sha256
+
       - name: Upload Linux AMD64 artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: linux-amd64-package
-          path: dist/
+          name: loongcollector-${{ github.event.inputs.version }}.linux-amd64.tar.gz
+          path: dist/loongcollector-${{ github.event.inputs.version }}.linux-amd64.tar.gz
+          retention-days: 1
+
+      - name: Upload Linux AMD64 SHA256
+        uses: actions/upload-artifact@v4
+        with:
+          name: loongcollector-${{ github.event.inputs.version }}.linux-amd64.tar.gz.sha256
+          path: dist/loongcollector-${{ github.event.inputs.version }}.linux-amd64.tar.gz.sha256
           retention-days: 1
 
   build-linux-arm64:
@@ -190,23 +204,42 @@ jobs:
               sleep 10
               
               # 安装必要的工具
-              apk add --no-cache make git
+              apk add --no-cache make git go
               
               # 设置子模块
               SUBMODULE_PATH='core/_thirdparty/coolbpf'
               git config submodule.\$SUBMODULE_PATH.url 'https://github.com/aliyun/coolbpf.git'
               git submodule update --init
               
+              # 设置 Go 环境
+              export GOPROXY='https://goproxy.cn,direct'
+              export GOARCH=arm64
+              export GOOS=linux
+              
               # 执行构建
               make dist
             "
           ls -la dist/
 
+      - name: Generate SHA256 for Linux ARM64
+        run: |
+          VERSION="${{ github.event.inputs.version }}"
+          cd dist
+          sha256sum loongcollector-$VERSION.linux-arm64.tar.gz > loongcollector-$VERSION.linux-arm64.tar.gz.sha256
+          ls -la *.sha256
+
       - name: Upload Linux ARM64 artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: linux-arm64-package
-          path: dist/
+          name: loongcollector-${{ github.event.inputs.version }}.linux-arm64.tar.gz
+          path: dist/loongcollector-${{ github.event.inputs.version }}.linux-arm64.tar.gz
+          retention-days: 1
+
+      - name: Upload Linux ARM64 SHA256
+        uses: actions/upload-artifact@v4
+        with:
+          name: loongcollector-${{ github.event.inputs.version }}.linux-arm64.tar.gz.sha256
+          path: dist/loongcollector-${{ github.event.inputs.version }}.linux-arm64.tar.gz.sha256
           retention-days: 1
 
   build-windows:
@@ -227,7 +260,7 @@ jobs:
 
       - name: Build Windows package
         run: |
-          VERSION="${{ github.event.inputs.version }}"
+          $VERSION = "${{ github.event.inputs.version }}"
           
           # 设置环境变量
           $env:LOONCOLLECTOR_VERSION = $VERSION
@@ -271,7 +304,7 @@ jobs:
           
           # 执行 Windows 构建脚本
           Write-Host "Starting Windows build..."
-          .\scripts\windows64_build_github_actions.bat $VERSION
+          .\scripts\windows64_build_github_actions.bat $env:LOONCOLLECTOR_VERSION
           
           # 检查构建结果
           if (Test-Path "output") {
@@ -282,11 +315,25 @@ jobs:
             exit 1
           }
 
+      - name: Generate SHA256 for Windows
+        run: |
+          $VERSION = "${{ github.event.inputs.version }}"
+          cd dist
+          Get-FileHash -Algorithm SHA256 "loongcollector-$VERSION.windows-amd64.zip" | ForEach-Object { "$($_.Hash.ToLower())  loongcollector-$VERSION.windows-amd64.zip" } | Out-File -FilePath "loongcollector-$VERSION.windows-amd64.zip.sha256" -Encoding ASCII
+          Get-Content "loongcollector-$VERSION.windows-amd64.zip.sha256"
+
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: windows-package
-          path: dist/
+          name: loongcollector-${{ github.event.inputs.version }}.windows-amd64.zip
+          path: dist/loongcollector-${{ github.event.inputs.version }}.windows-amd64.zip
+          retention-days: 1
+
+      - name: Upload Windows SHA256
+        uses: actions/upload-artifact@v4
+        with:
+          name: loongcollector-${{ github.event.inputs.version }}.windows-amd64.zip.sha256
+          path: dist/loongcollector-${{ github.event.inputs.version }}.windows-amd64.zip.sha256
           retention-days: 1
 
       - name: Upload to OSS
@@ -318,13 +365,25 @@ jobs:
       - name: Download Linux AMD64 artifacts
         uses: actions/download-artifact@v4
         with:
-          name: linux-amd64-package
+          name: loongcollector-${{ github.event.inputs.version }}.linux-amd64.tar.gz
+          path: temp-amd64/
+
+      - name: Download Linux AMD64 SHA256
+        uses: actions/download-artifact@v4
+        with:
+          name: loongcollector-${{ github.event.inputs.version }}.linux-amd64.tar.gz.sha256
           path: temp-amd64/
 
       - name: Download Linux ARM64 artifacts
         uses: actions/download-artifact@v4
         with:
-          name: linux-arm64-package
+          name: loongcollector-${{ github.event.inputs.version }}.linux-arm64.tar.gz
+          path: temp-arm64/
+
+      - name: Download Linux ARM64 SHA256
+        uses: actions/download-artifact@v4
+        with:
+          name: loongcollector-${{ github.event.inputs.version }}.linux-arm64.tar.gz.sha256
           path: temp-arm64/
 
       - name: Merge artifacts
@@ -334,10 +393,15 @@ jobs:
           cp temp-arm64/* dist/ || true
           ls -la dist/
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Container Registry
+        uses: docker/login-action@v3
         with:
-          go-version: ${{ env.GO_VERSION }}
+          registry: sls-opensource-registry.cn-shanghai.cr.aliyuncs.com
+          username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
+          password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
       - name: Upload packages to OSS
         run: |
