--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -508,11 +508,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ needs.create-release-branch.outputs.branch_name }}
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
       - name: Generate release markdown
         run: |
           VERSION="${{ github.event.inputs.version }}"
@@ -745,16 +740,12 @@ jobs:
             gh release create "v$VERSION" \
               --title "Release v$VERSION" \
               --notes-file release_notes.md \
-              --draft false \
-              --prerelease false \
               dist/*.tar.gz dist/*.zip dist/*.sha256
           else
             echo "No artifacts found, creating release without files..."
             gh release create "v$VERSION" \
               --title "Release v$VERSION" \
-              --notes-file release_notes.md \
-              --draft false \
-              --prerelease false
+              --notes-file release_notes.md
           fi
           
           # 检查release是否创建成功
