--- a/test/e2e/test_cases/flusher_kafka_cpp_2.x.x/docker-compose.yaml
+++ b/test/e2e/test_cases/flusher_kafka_cpp_2.x.x/docker-compose.yaml
@@ -61,7 +61,7 @@ services:
       zookeeper:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
+      test: ["CMD", "nc", "-z", "localhost", "9092"]
       interval: 10s
       timeout: 5s
       retries: 5
