--- a/plugins.yml
+++ b/plugins.yml
@@ -47,6 +47,7 @@ plugins:
     - import: "github.com/alibaba/ilogtail/plugins/input/debugfile"
     - import: "github.com/alibaba/ilogtail/plugins/input/docker/event"
     - import: "github.com/alibaba/ilogtail/plugins/input/docker/rawstdout"
+    - import: "github.com/alibaba/ilogtail/plugins/input/docker/logmeta"
     - import: "github.com/alibaba/ilogtail/plugins/input/docker/stdout"
     - import: "github.com/alibaba/ilogtail/plugins/input/example"
     - import: "github.com/alibaba/ilogtail/plugins/input/goprofile"
